feat: Remove deprecated 'swal' function and add 'sweetalert2' package

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-confetti": "6.1.0",
-    "react-sweet-alert": "0.1.0"
+    "react-sweet-alert": "0.1.0",
+    "sweetalert2": "11.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.51",
